2003-09-22  Darin Adler  <darin@apple.com>

        * JavaScriptCore.pbproj/project.pbxproj: Rename Mixed build style to OptimizedWithSymbols.

2003-09-22  Darin Adler  <darin@apple.com>

        Reviewed by Ken.

        * kjs/config.h: Added HAVE_SYS_PARAM_H, since KJS does look for this header, and we do
        indeed have it. Just something I noticed in passing while cleaning up configure.in.

2003-09-20  Darin Adler  <darin@apple.com>

        Reviewed by Dave.

        - fixed 3419380 -- JavaScript Date.getTimezoneOffset is off by one hour (during daylight savings)

        * kjs/date_object.cpp: (DateProtoFuncImp::call): The daylight savings correction
        in here was incorrect. Perhaps I should have corrected it for the non-BSD case too,
        but I'm not sure the issue is the same.

2003-09-17  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        * kjs/date_object.cpp: Removed our CF-based implementations of gmtime, localtime,
        mktime, timegm, and time, since they no longer have the slow "hit the filesystem
        every time" behavior.

=== Safari-100 ===

=== Safari-99 ===

=== Safari-98 ===

=== Safari-97 ===

=== Safari-96 ===

2003-08-27  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by John

	- fixed rdar://problem/3397316 - sherlock crash: KJS::Collector::allocate(unsigned long)
	
	* kjs/internal.cpp:
        (InterpreterImp::InterpreterImp): Hold the lock a bit longer, so
	the call to initGlobalObject is covered.

=== Safari-95 ===

2003-08-24  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - fixed 3098350 -- opt. params to date methods are ignored (can't set end date in Exchange/Outlook web cal.)

        * kjs/date_object.cpp: (DateProtoFuncImp::call): Added code to handle the optional parameters.
        Strangely, the table of functions already had the right number of parameters listed, but the
        code to look at the parameter values was missing.

=== Safari-94 ===
